log/build_2020-12-18_11-56-38/py_pubsub/stderr.log
  File "/home/yan/camps_ws/install/py_pubsub/lib/python3.6/site-packages/py_pubsub/subscriber_member_function.py", line 25
    except CvBridgeError, e:
                        ^
SyntaxError: invalid syntax

